[gd_scene load_steps=16 format=1]

[ext_resource path="res://minigames/Simon/Main.gd" type="Script" id=1]
[ext_resource path="res://minigames/Simon/whitebg.png" type="Texture" id=2]
[ext_resource path="res://minigames/Simon/green.png" type="Texture" id=3]
[ext_resource path="res://minigames/Simon/red.png" type="Texture" id=4]
[ext_resource path="res://minigames/Simon/yellow.png" type="Texture" id=5]
[ext_resource path="res://minigames/Simon/blue.png" type="Texture" id=6]
[ext_resource path="res://minigames/Simon/blue.wav" type="Sample" id=7]
[ext_resource path="res://minigames/Simon/green.wav" type="Sample" id=8]
[ext_resource path="res://minigames/Simon/red.wav" type="Sample" id=9]
[ext_resource path="res://minigames/Simon/yellow.wav" type="Sample" id=10]

[sub_resource type="Animation" id=1]

resource/name = "AnimationGreen"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5, 1.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "AnimationRed"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5, 1.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "AnimationYellow"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5, 1.0 ]
}

[sub_resource type="Animation" id=4]

resource/name = "AnimationBlue"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5, 1.0 ]
}

[sub_resource type="SampleLibrary" id=5]

samples/blue = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/green = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/red = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/yellow = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )
NAME = "Simon"
INSTRUCTION = "Repeat"
DURATION = 4
TIMEOUT_WIN = false
USE_KEYS_HUD = false
USE_MOUSE_HUD = true

[node name="whitebg" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="ButtonGreen" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 200.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.375, 0.375, 0.375, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ButtonGreen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/AnimationGreen = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ButtonRed" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 200.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="ButtonRed"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/AnimationRed = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ButtonYellow" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 200.0
margin/right = 320.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="ButtonYellow"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/AnimationYellow = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ButtonBlue" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 200.0
margin/right = 640.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="ButtonBlue"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/AnimationBlue = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


